--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
       <a href="#features">Features</a>
       <a href="#join">Join</a>
     </nav>
-    <div class="lightsabers">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Lightsaber_blue.svg/120px-Lightsaber_blue.svg.png" alt="Blue Lightsaber">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Lightsaber_red.svg/120px-Lightsaber_red.svg.png" alt="Red Lightsaber">
-    </div>
+<div class="lightsabers">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Lightsaber_blue.svg" alt="Blue Lightsaber" height="60">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/2/20/Lightsaber_red.svg" alt="Red Lightsaber" height="60">
+</div>
   </header>
 
   <section id="about">
@@ -161,4 +161,5 @@
     <a href="#">Download & Play</a>
     <div class="discord-link">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffe81f" viewBox="0 0 24 24">
+
         <path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.211.375-.444.864-.608 1.249a18.219 18.219 0 0 0-5.487 0 12.51 12.51 0 0 0-.617-1.249.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.683 4.369a.07.07 0 0 0-.032.027C.533 9.045-.32 13.579.099 18.057a.082.082 0 0 0 .031.056 19.911 19.911 0 0 0 6.063 3.088.077.077 0 0 0 .084-.027c.466-.641.879-1.318 1.233-2.027a.076.076 0 0 0-.041-.104 13.107 13.107 0 0 1-1.872-.896.077.077 0 0 1-.008-.129c.126-.094.252-.192.373-.291a.074.074 0 0 1 .077-.01c3.927 1.792 8.18 1.792 12.061 0a.074.074 0 0 1 .078.009c.122.099.247.197.374.291a.077.077 0 0 1-.007.129 12.64 12.64 0 0 1-1.873.895.076.076 0 0 0-.04.105c.36.709.774 1.386 1.232 2.027a.076.076 0 0 0 .084.027 19.888 19.888 0 0 0 6.063-3.088.077.077 0 0 0 .031-.056c.5-5.177-.838-9.673-3.552-13.661a.061.061 0 0 0-.03-.027zM8.02 15.331c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.213 0 2.176 1.095 2.157 2.418 0 1.334-.955 2.419-2.157 2.419zm7.974 0c-1.183 0-
