--- a/index.html
+++ b/index.html
@@ -9,27 +9,35 @@
     body {
       margin: 0;
       font-family: 'Orbitron', sans-serif;
-      background: url('https://www.transparenttextures.com/patterns/stardust.png'), radial-gradient(circle at top, #0d0d0d, #000000);
+      background: radial-gradient(circle at top, #0d0d0d, #000000);
       color: #f0f0f0;
     }
     header {
-      background: #111;
-      padding: 2rem;
-      text-align: center;
-      border-bottom: 2px solid #444;
       position: relative;
+      height: 100vh;
+      background: url('assets/swgvanguardback.png') center/cover no-repeat;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+    header img.logo {
+      max-width: 300px;
+      margin-bottom: 1rem;
+      filter: drop-shadow(0 0 10px #ffe81f);
     }
     header h1 {
       font-size: 3rem;
       color: #ffe81f;
-      margin: 0;
       text-shadow: 0 0 10px #ffe81f;
     }
     nav {
+      position: absolute;
+      top: 20px;
+      right: 30px;
       display: flex;
-      justify-content: center;
-      gap: 2rem;
-      margin-top: 1rem;
+      gap: 1.5rem;
     }
     nav a {
       color: #f0f0f0;
@@ -38,14 +46,6 @@
     }
     nav a:hover {
       color: #ffe81f;
-    }
-    .lightsabers {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-    .lightsabers img {
-      height: 60px;
     }
     section {
       padding: 2rem;
@@ -56,14 +56,6 @@
       color: #ffe81f;
       font-size: 2rem;
       margin-bottom: 1rem;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-    ul li {
-      margin: 0.5rem 0;
-      font-size: 1.1rem;
     }
     .status-panel {
       background: rgba(0, 255, 255, 0.1);
@@ -83,6 +75,14 @@
       color: #00ff00;
       font-size: 1.5rem;
       font-weight: bold;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    ul li {
+      margin: 0.5rem 0;
+      font-size: 1.1rem;
     }
     .cta {
       background: #222;
@@ -117,20 +117,27 @@
       border-top: 2px solid #444;
       font-size: 0.9rem;
     }
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+      nav {
+        flex-direction: column;
+        top: 10px;
+        right: 10px;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
+    <img src="assets/SWGVanguardLogo.png" alt="SWG Vanguard Logo" class="logo">
     <h1>SWG Vanguard</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#features">Features</a>
       <a href="#join">Join</a>
     </nav>
-<div class="lightsabers">
-  <img src="assets/lightsaber_blue.svg" alt="Blue Lightsaber" height="60">
-  <img src="assets/lightsaber_red.svg" alt="Red Lightsaber" height="60">
-</div>
   </header>
 
   <section id="about">
@@ -161,6 +168,14 @@
     <a href="#">Download & Play</a>
     <div class="discord-link">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffe81f" viewBox="0 0 24 24">
+        <path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515..."/>
+      </svg>
+      <a href="https://discord.gg/RHhDrhU3" target="_blank">Join us on Discord</a>
+    </div>
+  </section>
 
-        <path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515.074.074 0 0 0-.079.037c-.211.375-.444.864-.608 1.249a18.219 18.219 0 0 0-5.487 0 12.51 12.51 0 0 0-.617-1.249.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.683 4.369a.07.07 0 0 0-.032.027C.533 9.045-.32 13.579.099 18.057a.082.082 0 0 0 .031.056 19.911 19.911 0 0 0 6.063 3.088.077.077 0 0 0 .084-.027c.466-.641.879-1.318 1.233-2.027a.076.076 0 0 0-.041-.104 13.107 13.107 0 0 1-1.872-.896.077.077 0 0 1-.008-.129c.126-.094.252-.192.373-.291a.074.074 0 0 1 .077-.01c3.927 1.792 8.18 1.792 12.061 0a.074.074 0 0 1 .078.009c.122.099.247.197.374.291a.077.077 0 0 1-.007.129 12.64 12.64 0 0 1-1.873.895.076.076 0 0 0-.04.105c.36.709.774 1.386 1.232 2.027a.076.076 0 0 0 .084.027 19.888 19.888 0 0 0 6.063-3.088.077.077 0 0 0 .031-.056c.5-5.177-.838-9.673-3.552-13.661a.061.061 0 0 0-.03-.027zM8.02 15.331c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.213 0 2.176 1.095 2.157 2.418 0 1.334-.955 2.419-2.157 2.419zm7.974 0c-1.183 0-
-
+  <footer>
+    © 2025 SWG Vanguard. Built by fans, for fans. May the Force be with you.
+  </footer>
+</body>
+</html>
