--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
       margin-bottom: 1rem;
     }
     .discord-link {
-      display: flex;
-      justify-content: center;
+      display: inline-flex;
       align-items: center;
+      justify-content: center;
       gap: 0.5rem;
       margin-top: 0.5rem;
     }
