--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
       margin-top: 0.5rem;
     }
     .discord-link svg {
-      flex-shrink: 0;
+      width: 24px;
+      height: 24px;
+      fill: #ffe81f;
     }
     .discord-link a {
       color: #ffe81f;
@@ -136,7 +138,7 @@
   <section class="status-panel">
     <h3>Server Status</h3>
     <div class="online">ONLINE</div>
-    <p>Uptime: 99.9% | Players Online: 6 | Faction Balance: 52% Rebel / 48% Imperial</p>
+    <p>Uptime: 99.9% | Players Online: 128 | Faction Balance: 52% Rebel / 48% Imperial</p>
   </section>
 
   <section id="features">
@@ -155,8 +157,8 @@
     <p>Download the launcher, connect to our galaxy, and begin your journey.</p>
     <a href="#" class="download">Download & Play</a>
     <div class="discord-link">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffe81f" viewBox="0 0 24 24">
-        <path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515..."/>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515 13.227 13.227 0 0 0-.625 1.289 18.432 18.432 0 0 0-5.587 0 13.227 13.227 0 0 0-.625-1.289 19.791 19.791 0 0 0-4.885 1.515C2.533 9.045 1.5 13.1 1.5 17.1c0 .2.012.398.036.595a19.84 19.84 0 0 0 5.995 1.905 13.227 13.227 0 0 0 .625-1.289 18.432 18.432 0 0 0 5.587 0 13.227 13.227 0 0 0 .625 1.289 19.84 19.84 0 0 0 5.995-1.905c.024-.197.036-.395.036-.595 0-4-1.033-8.055-3.683-12.731zM9.5 14.5c-.828 0-1.5-.9-1.5-2s.672-2 1.5-2 1.5.9 1.5 2-.672 2-1.5 2zm5 0c-.828 0-1.5-.9-1.5-2s.672-2 1.5-2 1.5.9 1.5 2-.672 2-1.5 2z"/>
       </svg>
       <a href="https://discord.gg/RHhDrhU3" target="_blank">Join us on Discord</a>
     </div>
@@ -167,4 +169,3 @@
   </footer>
 </body>
 </html>
-
